Added Package infor and removed some warnings